	(nnshimbun-retrieve-headers, nnshimbun-retrieve-headers-with-nov):
	Reimplemented.
	(nnshimbun-generate-nov-database, nnshimbun-search-id)
	(nnshimbun-write-nov, nnshimbun-request-expire-articles):
	Simplified.
	(nnshimbun-nov-buffer-name, nnshimbun-nov-file-name): Make the
	first argument optional.
	(nnshimbun-open-nov): Bind variables to set coding systems for
	path names.

2002-10-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 05.

	* lisp/nnheader.el (nnheader-auto-save-coding-system): Default to
	`iso-2022-7bit'.

2002-10-29  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/nnshimbun.el (nnshimbun-request-article-1): Install trick
	to keep compatibility between T-gnus and Oort Gnus.

2002-10-29  Tadashi Watanabe  <watanabe@sigmaitec.co.jp>

	* lisp/nnshimbun.el (nnshimbun-request-expire-articles): Do not
	use removed variables.

2002-10-29  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/nnshimbun.el: Clean up.
	(nnshimbun-nov-last-check): Removed.
	(nnshimbun-nov-buffer-alist): Removed.
	(nnshimbun-nov-buffer-file-name): Removed.
	(nnshimbun-close-server): Use `nnshimbun-write-nov' instead of
	`nnshimbun-save-nov'.
	(nnshimbun-mail-header-subject): Removed.
	(nnshimbun-mail-header-from): Removed.
	(nnshimbun-make-shimbun-header): Removed.
	(nnshimbun-parse-nov): New function.
	(nnshimbun-request-article-1): Use `nnshimbun-parse-nov' instead
	of `nnheader-parse-nov'.
	(nnshimbun-retrieve-headers): Likewise.
	(nnshimbun-nov-buffer-name): New function.
	(nnshimbun-nov-file-name): Ditto.
	(nnshimbun-open-nov): Clean up.
	(nnshimbun-write-nov): Ditto; Aceept the 2nd optional argument.
	(nnshimbun-save-nov): Removed.

2002-10-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/dgnushack.el (dgnushack-dont-compile-files): New constant
	containing almost all mm*.el.
	(dgnushack-compile): Don't byte-compile the file in
	`dgnushack-dont-compile-files'.

2002-10-09  Katsumi Yamaoka  <yamaoka@jpl.org>
